added Polish lang to game data
fixed some missprints

--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -246,7 +246,7 @@
     "-": "-",
     "Centaur's Axe": "Секира Кентавра",
     "Blackshard of the Dead Knight": "Клинок Мёртвого Рыцаря",
-    "Greater Knoll's Flail": "Кистень Великого Гнолла",
+    "Greater Gnoll's Flail": "Кистень Великого Гнолла",
     "Ogre's Club of Havoc": "Дубина Свирепого Огра",
     "Sword of Hellfire": "Меч Пылающей Преисподней",
     "Titan's Gladius": "Гладиус Титана",
@@ -254,7 +254,7 @@
     "Red Dragon Flame Tongue": "Языки Пламени Красного Дракона",
     "Armageddon's Blade": "Клинок Армагеддона",
     "Angelic Alliance": "Альянс Ангелов",
-    "Titans Thunder": "Грохот Титана",
+    "Titan's Thunder": "Грохот Титана",
     "Ironfist of the Ogre": "Железный Кулак Огра",
     "Trident of Dominion": "Трезубец Могущества"
   },
@@ -297,7 +297,7 @@
     "Armor of Wonder": "Доспехи Чудес",
     "Dragon Scale Armor": "Доспехи из Чешуи Дракона",
     "Surcoat of Counterpoise": "Одеяние Равновесия",
-    "Armor of the Dammed": "Доспехи Проклятых",
+    "Armor of the Damned": "Доспехи Проклятых",
     "Power of the Dragon Father": "Могущество Отца Драконов",
     "Royal Armor of Nix": "Королевские Доспехи Никсов",
     "Plate of Dying Light": "Латы Гаснущих Светил"
@@ -381,18 +381,18 @@
     "Bird of Perception": "Птица Восприятия",
     "Stoic Watchman": "Бдительный Страж",
     "Emblem of Cognizance": "Символ Знаний",
-    "Statesmen's Medal": "Медаль Чиновника",
+    "Statesman's Medal": "Медаль Чиновника",
     "Charm of Mana": "Брелок Маны",
     "Talisman of Mana": "Талисман Маны",
     "Mystic Orb of Mana": "Мистическая Сфера Маны",
     "Orb of Firmament": "Сфера Небесного Свода",
     "Orb of Silt": "Сфера Ила",
-    "Orb of Tempestous Fire": "Сфера Бушующего Огня",
+    "Orb of Tempestuous Fire": "Сфера Бушующего Огня",
     "Orb of Driving Rain": "Сфера Проливного Дождя",
-    "Spirit of Opression": "Дух Уныния",
+    "Spirit of Oppression": "Дух Уныния",
     "Hourglass of the Evil Hour": "Песочные Часы Недоброго Часа",
     "Tome of Fire Magic": "Книга Магии Огня",
-    "Tome of Wind Magic": "Книга Магии Воздуха",
+    "Tome of Air Magic": "Книга Магии Воздуха",
     "Tome of Water Magic": "Книга Магии Воды",
     "Tome of Earth Magic": "Книга Магии Земли",
     "Golden Bow": "Золотой Лук",
@@ -400,15 +400,15 @@
     "Orb of Vulnerability": "Сфера Уязвимости",
     "Vial of Lifeblood": "Склянка Жизненной Силы",
     "Everpouring Vial of Mercury": "Неиссякаемая Склянка Ртути",
-    "Inexhaustable Cart of Ore": "Неистощимая Телега Руды",
-    "Inexhaustable Cart of Lumber": "Неистощимая Телега Древесины",
+    "Inexhaustible Cart of Ore": "Неистощимая Телега Руды",
+    "Inexhaustible Cart of Lumber": "Неистощимая Телега Древесины",
     "Endless Sack of Gold": "Бездонный Мешок Золота",
     "Endless Bag of Gold": "Бездонная Сумка Золота",
     "Endless Purse of Gold": "Бездонный Кошель Золота",
     "Legs of Legion": "Ноги Легиона",
     "Loins of Legion": "Поясница Легиона",
     "Torso of Legion": "Туловище Легиона",
-    "Arms of Legion": "Реки Легиона",
+    "Arms of Legion": "Руки Легиона",
     "Head of Legion": "Голова Легиона",
     "Shackles of War": "Оковы Войны",
     "Orb of Inhibition": "Сфера Запрещения",
@@ -482,7 +482,7 @@
     "Slow": "Медлительность",
     "Slayer": "Палач",
     "Frenzy": "Бешенство",
-    "Titans Lightning Bolt": "Молния Титана",
+    "Titan's Lightning Bolt": "Молния Титана",
     "Counterstrike": "Контрудар",
     "Berserk": "Берсерк",
     "Hypnotize": "Гипноз",
@@ -491,10 +491,10 @@
     "Teleport": "Телепорт",
     "Remove Obstacle": "Убрать Преграду",
     "Clone": "Клон",
-    "Summon Fire Elemental": "Элементаль Огня",
-    "Summon Earth Elemental": "Элементаль Земли",
-    "Summon Water Elemental": "Элементаль Воды",
-    "Summon Air Elemental": "Элементаль Воздуха"
+    "Fire Elemental": "Элементаль Огня",
+    "Earth Elemental": "Элементаль Земли",
+    "Water Elemental": "Элементаль Воды",
+    "Air Elemental": "Элементаль Воздуха"
   },
   "SpellDescriptions": {
     "Summon Boat": "Ближайший нейтральный корабль или собственный корабль перемещается из любой точки карты к герою.",
@@ -542,7 +542,7 @@
     "Curse": "Выбранный вражеский отряд всегда наносит минимальный урон в бою. Цель теряет эффект Благословения. Не действует на нежить.",
     "Bloodlust": "Увеличивает силу атаки выбранного дружественного отряда в ближнем бою.",
     "Precision": "Увеличивает силу атаки выбранного дружественного отряда при стрелковой атаке.",
-    "Weakness": "Увеличивает силу атаки выбранного вражеского отряда.",
+    "Weakness": "Уменьшает силу атаки выбранного вражеского отряда.",
     "Stone Skin": "Увеличивает защиту выбранного дружественного отряда.",
     "Disrupting Ray": "Уменьшает защиту выбранного вражеского отряда. Один и тот же отряд может быть поражён несколько раз.",
     "Prayer": "Увеличивает силу атаки, защите и скорость выбранного дружественного отряда.",
@@ -554,19 +554,19 @@
     "Slow": "Уменьшает скорость выбранного вражеского отряда. Снимает эффект Ускорения.",
     "Slayer": "Увеличивает силу атаки выбранного дружественного отряда против драконов, чудищ, гидр, огненных птиц, морских змеев и коатлей.",
     "Frenzy": "Заклинание разума. Выбранный дружественный отряд осознанно снижает свою защиту до 0, чтобы увеличить ярость своей атаки. Сила атаки увеличивается настолько же, насколько уменьшилась защита отряда.",
-    "Titans Lightning Bolt": "Наносит 600 единиц урона выбранному вражескому отряду и не требует затрат маны. Требуется артефакт Грохот Титана.",
+    "Titan's Lightning Bolt": "Наносит 600 единиц урона выбранному вражескому отряду и не требует затрат маны. Требуется артефакт Грохот Титана.",
     "Counterstrike": "Выбранный дружественный отряд немедленно получает дополнительную атаку и будет получать дополнительную ответную атаку в начале каждого раунда.",
     "Berserk": "Заклинание разума. Выбранный отряд будет случайно атаковать ближайший к нему отряд, будь то враг или друг. Цель теряет эффект гипноза. Заклинание действует пока цель не совершит атаку, в противном случае длительность заклинания не ограничена.",
     "Hypnotize": "Заклинание разума. Временно передаёт вам управление выбранным вражеским отрядом. Снимает эффект Берсерка.",
     "Forgetfulness": "Заклинание разума. Половина выбранного вражеского стрелкового отряда перестаёт атаковать.",
     "Blind": "Заклинание разума. Временно ослепляет выбранный вражеский отряд, так что он становится неспособным двигаться и отвечает на атаки вполсилы. Ослепление остается, пока отряд не атакован, или же чары не сняты. Не действует на нежить.",
-    "Teleport": "Телепортирует колдующего в ближайший дружественный город.",
+    "Teleport": "Телепортирует любой дружественный отряд в любую точку поля битвы. Снимает эффект связывающих пут дендроидов.",
     "Remove Obstacle": "Убирает выбранное магом обычное не встроенное препятствие (дерево, камень и т.п.) с поля битвы.",
     "Clone": "Создает клон - временную копию выбранного дружественного отряда. При получении урона или гибели прототипа клон исчезает. У каждого отряда может быть только один клон. Не действует на боевые машины.",
-    "Summon Fire Elemental": "Позволяет призвать Огненных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя.",
-    "Summon Earth Elemental": "Позволяет призвать Земляных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя.",
-    "Summon Water Elemental": "Позволяет призвать Водных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя.",
-    "Summon Air Elemental": "Позволяет призвать Воздушных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя."
+    "Fire Elemental": "Позволяет призвать Огненных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя.",
+    "Earth Elemental": "Позволяет призвать Земляных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя.",
+    "Water Elemental": "Позволяет призвать Водных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя.",
+    "Air Elemental": "Позволяет призвать Воздушных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя."
   },
   "ArtifactDescriptions": {
     "Amulet of the Undertaker": "Некромантия +5%",
@@ -581,7 +581,7 @@
     "Bird of Perception": "Навык орлиного глаза +5%",
     "Stoic Watchman": "Навык орлиного глаза +10%",
     "Emblem of Cognizance": "Навык орлиного глаза +15%",
-    "Statesmen's Medal": "Цена капитуляции -10%",
+    "Statesman's Medal": "Цена капитуляции -10%",
     "Diplomat Ring": "Цена капитуляции -10%",
     "Ambassador's Sash": "Цена капитуляции -10%",
     "Ring of the Wayfarer": "Скорость ваших войск +1",
@@ -596,13 +596,13 @@
     "Cape of Conjuring": "Длительность заклинаний +3",
     "Orb of Firmament": "Урон от ваших заклинаний Воздуха +50%",
     "Orb of Silt": "Урон от ваших заклинаний Земли +50%",
-    "Orb of Tempestous Fire": "Урон от ваших заклинаний Огня +50%",
+    "Orb of Tempestuous Fire": "Урон от ваших заклинаний Огня +50%",
     "Orb of Driving Rain": "Урон от ваших заклинаний Воды +50%",
     "Recanter's Cloak": "Предотвращает произнесение заклинаний 3+ уровня",
-    "Spirit of Opression": "Нейтрализует положительный боевой дух",
+    "Spirit of Oppression": "Нейтрализует положительный боевой дух",
     "Hourglass of the Evil Hour": "Нейтрализует положительную удачу",
     "Tome of Fire Magic": "Книга содержит все заклинания Огня",
-    "Tome of Wind Magic": "Книга содержит все заклинания Воздуха",
+    "Tome of Air Magic": "Книга содержит все заклинания Воздуха",
     "Tome of Water Magic": "Книга содержит все заклинания Воды",
     "Tome of Earth Magic": "Книга содержит все заклинания Земли",
     "Boots of Levitation": "Позволяет ходить по воде",
@@ -626,9 +626,9 @@
     "Everflowing Crystal Cloak": "Приносит 1 ед. кристаллов в день",
     "Ring of Infinite Gems": "Приносит 1 ед. драгоценных камней в день",
     "Everpouring Vial of Mercury": "Приносит 1 ед. ртути в день",
-    "Inexhaustable Cart of Ore": "Приносит 1 ед. руды в день",
+    "Inexhaustible Cart of Ore": "Приносит 1 ед. руды в день",
     "Eversmoking Ring of Sulfur": "Приносит 1 ед. серы в день",
-    "Inexhaustable Cart of Lumber": "Приносит 1 ед. дерева в день",
+    "Inexhaustible Cart of Lumber": "Приносит 1 ед. дерева в день",
     "Endless Sack of Gold": "Приносит 1000 ед. золота в день",
     "Endless Bag of Gold": "Приносит 750 ед. золота в день",
     "Endless Purse of Gold": "Приносит 500 ед. золота в день",
@@ -646,10 +646,10 @@
     "Angelic Alliance": "Составной артефакт: Нет падения боевого духа для существ из городов доброго и нейстрального мировоззрения. В начале битвы творит заклинание Молитва экспертной ступени на 10 раундов.",
     "Cloak of Undead King": "Составной артефакт: Некромантия +30%, Возрождает другие типы существ.",
     "Elixir of Life": "Составной артефакт: В дополнение к эффектам отдельных компонентов дает всем живым существам +25% к здоровью и способность регенерировать 50 здоровья каждый раунд.",
-    "Armor of the Dammed": "Составной артефакт: В начале боя накладывает на все вражеские отряды на 50 раундов заклинания Медлительность, Проклятье, Слабость и Неудача экспертной ступени.",
+    "Armor of the Damned": "Составной артефакт: В начале боя накладывает на все вражеские отряды на 50 раундов заклинания Медлительность, Проклятье, Слабость и Неудача экспертной ступени.",
     "Statue of Legion": "Составной артефакт: В дополнение к эффектам отдельных компонентов увеличивает прирост всех существ во всех городах на 50% (без учета внешних жилищ и прочих бонусов)",
     "Power of the Dragon Father": "Составной артефакт: Все войска героя получают иммунитет ко всем заклинаниям 1-4 уровня, кроме Снятия Заклинаний",
-    "Titans Thunder": "Составной артефакт: Дает заклинание Молния Титана, наносящее урон 600, не тратя при этом ману. Если у героя нет Книги Заклинаний он получает её бесплатно.",
+    "Titan's Thunder": "Составной артефакт: Дает заклинание Молния Титана, наносящее урон 600, не тратя при этом ману. Если у героя нет Книги Заклинаний он получает её бесплатно.",
     "Admiral's Hat": "Составной артефакт: В дополнение к эффектам отдельных компонентов при посадке и высадке из корабля позволяет не тратить все очки перемещения",
     "Bow of the Sharpshooter": "Составной артефакт: В дополнение к эффектам отдельных компонентов позволяет стрелковым отрядам стрелять, даже если рядом есть вражеское существо. Снимает штрафы за расстояние и препятствия при выстреле.",
     "Wizard's Well": "Составной артефакт: Восстанавливает всю ману каждый день",
@@ -776,8 +776,8 @@
     "Ogre Mage": "Огр-Маг",
     "Roc": "Птица Рух",
     "Thunderbird": "Птица Грома",
-    "Cyclops": "Циклоп",
-    "Cyclops King": "Циклоп-Король",
+    "Cyclop": "Циклоп",
+    "Cyclop King": "Циклоп-Король",
     "Behemoth": "Чедище",
     "Ancient Behemoth": "Древнее Чудище",
     "Gnoll": "Гнолл",
@@ -811,7 +811,7 @@
     "Nymph": "Нимфа",
     "Oceanid": "Океанида",
     "Crew Mate": "Матрос",
-    "Seamen": "Головорез",
+    "Seaman": "Головорез",
     "Pirate": "Пират",
     "Corsair": "Корсар",
     "Sea Dog": "Морской Волк",
@@ -847,7 +847,7 @@
     "Nomad": "Кочевник",
     "Sharpshooter": "Снайпер",
     "Satyr": "Сатир",
-    "Steel golem": "Стальной Голем",
+    "Steel Golem": "Стальной Голем",
     "Gold Golem": "Золотой Голем",
     "Troll": "Троль",
     "Fangarm": "Фангарм",
@@ -855,7 +855,7 @@
     "Enchanter": "Чародей",
     "Azure Dragon": "Лазурный Дракон",
     "Crystal Dragon": "Кристальный Дракон",
-    "Faeri Dragon": "Сказочный Дракон",
+    "Faerie Dragon": "Сказочный Дракон",
     "Rust Dragon": "Ржавый Дракон"
   }
 }
