--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -204,7 +204,9 @@
     "Ziph": "Зиф",
     "Victoria": "Виктория",
     "Eanswythe": "Энсвита",
-    "Frederick": "Фредерик"
+    "Frederick": "Фредерик",
+
+    "Tarnum": "Тарнум"
   },
   "Skills": {
     "Pathfinding": "Поиск пути",
@@ -424,6 +426,13 @@
     "Charm of Eclipse": "Амулет Затмения",
     "Sleepkeeper": "Хранитель Снов"
   },
+  "WarMachines": {
+    "Catapult": "Катапульта",
+    "Ballista": "Баллиста",
+    "Ammo Cart": "Подвоза с Боеприпасами",
+    "First Aid Tent": "Палатка Первой Помощи",
+    "Canon": "Пушка"
+  },
   "Spells": {
     "Summon Boat": "Вызвать Корабль",
     "Scuttle Boat": "Затопить Корабль",
@@ -569,6 +578,8 @@
     "Air Elemental": "Позволяет призвать Воздушных Элементалей на случайную позицию своего края поля боя. Элементали будут служить вам до конца боя."
   },
   "ArtifactDescriptions": {
+    "Speculum": "Увеличивает радиус разведки героя на 1",
+    "Spyglass": "Увеличивает радиус разведки героя на 1",
     "Amulet of the Undertaker": "Некромантия +5%",
     "Vampire's Cowl": "Некромантия +10%",
     "Dead Men's Boots": "Некромантия +15%",
