added Grail to Inventory artefacts and lang translates

--- a/Heroes3Editor/Lang/lang-data.pl.json
+++ b/Heroes3Editor/Lang/lang-data.pl.json
@@ -244,6 +244,9 @@
     "Advanced": "Zaawansow.",
     "Expert": "Mistrz"
   },
+  "CommonArtifacts": {
+    "Grail": "Graal"
+  },
   "Weapons": {
     "-": "-",
     "Centaur's Axe": "Topór centaura",
