--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -244,6 +244,9 @@
     "Advanced": "Продвинутый",
     "Expert": "Экспертный"
   },
+  "CommonArtifacts": {
+    "Grail": "Грааль"
+  },
   "Weapons": {
     "-": "-",
     "Centaur's Axe": "Секира Кентавра",
