Refactoring Constants.Spells
- Fix some errors Inventory Remove
- added polish translation check on saved game loading (fix hero name Catherine->Katarzyna)
- added hero Giselle

--- a/Heroes3Editor/Lang/lang-data.pl.json
+++ b/Heroes3Editor/Lang/lang-data.pl.json
@@ -8,7 +8,7 @@
     "Sorsha": "Sorsha",
     "Tyris": "Tyris",
     "Lord Haart": "Lord Haart",
-    "Catherine": "Catherine",
+    "Catherine": "Katarzyna",
     "Roland": "Roland",
     "Sir Mullich": "Sir Mullich",
     "Adela": "Adela",
@@ -37,6 +37,7 @@
     "Melodia": "Melodia",
     "Gem": "Gem",
     "Uland": "Uland",
+    "Giselle": "Giselle",
 
     "Fafner": "Fafner",
     "Iona": "Iona",
