--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -37,6 +37,7 @@
     "Melodia": "Мелодиа",
     "Gem": "Джэм",
     "Uland": "Уланд",
+    "Giselle": "Жизель",
 
     "Fafner": "Фафнер",
     "Iona": "Иона",
