Added french translation for game data
- fixed some misprints
- fixed hero Torosar name with space
- fixed save bin data

--- a/Heroes3Editor/Lang/lang-data.pl.json
+++ b/Heroes3Editor/Lang/lang-data.pl.json
@@ -46,7 +46,7 @@
     "Piquedram": "Piquedram",
     "Rissa": "Rissa",
     "Thane": "Thane",
-    "Torosar": "Torosar",
+    "Torosar ": "Torosar ",
     "Aine": "Aine",
     "Astral": "Astral",
     "Cyra": "Cyra",
@@ -326,7 +326,7 @@
     "-": "-",
     "Sandal's of the Saint": "Sandały świętego",
     "Dragonbone Greaves": "Nagolenniki ze smoczych kości",
-    "Dead Men's Boots": "Buty trupa",
+    "Dead Man's Boots": "Buty trupa",
     "Boots of Polarity": "Buty odporności",
     "Boots of Levitation": "Magiczne buty lewitacji",
     "Boots of Speed": "Buty przyśpieszenia",
@@ -357,7 +357,7 @@
     "-": "-",
     "Quiet Eye of the Dragon": "Oprawione oko smoka",
     "Still Eye of the Dragon": "Zastygłe oko smoka",
-    "Diplomat Ring": "Pierścień dyplomaty",
+    "Diplomat's Ring": "Pierścień dyplomaty",
     "Ring of the Wayfarer": "Pierścień wędrowca",
     "Equestrian's Gloves": "Rękawice jeźdźca",
     "Ring of Conjuring": "Zaklęty pierścień",
@@ -585,10 +585,10 @@
     "Spyglass": "Zwiększa pole widzenia bohatera o +1",
     "Amulet of the Undertaker": "Nekromacji +5%",
     "Vampire's Cowl": "Nekromacji +10%",
-    "Dead Men's Boots": "Nekromacji +15%",
+    "Dead Man's Boots": "Nekromacji +15%",
     "Garniture of Interference": "Zwiększa odporność bohatera na magię o 5%",
     "Surcoat of Counterpoise": "Zwiększa odporność bohatera na magię o 10%",
-    "Boots of Polarity": "Zwiększa odporność bohatera na magię o 10%",
+    "Boots of Polarity": "Zwiększa odporność bohatera na magię o 15%",
     "Bow of Elven Cherrywood": "Zwiększa zdolności łucznicze bohatera o 5%",
     "Bowstring of the Unicorns's Mane": "Zwiększa zdolności łucznicze bohatera o 10%",
     "Angel Feather Arrows": "Zwiększa zdolności łucznicze bohatera o 15%",
@@ -596,7 +596,7 @@
     "Stoic Watchman": "Zwiększa umiejętność 'sokoli wzrok' bohatera o 10%",
     "Emblem of Cognizance": "Zwiększa umiejętność 'sokoli wzrok' bohatera o 15%",
     "Statesman's Medal": "Zmniejsza koszty poddania się o 10%",
-    "Diplomat Ring": "Zmniejsza koszty poddania się o 10%",
+    "Diplomat's Ring": "Zmniejsza koszty poddania się o 10%",
     "Ambassador's Sash": "Zmniejsza koszty poddania się o 10%",
     "Ring of the Wayfarer": "Zwiększa szybkość wszystkich oddziałów o +1",
     "Equestrian's Gloves": "Zasięg bohatera na lądzie +300",
@@ -690,7 +690,7 @@
   "HotaArtifactDescriptions": {
     "Amulet of the Undertaker": "Nekromacji +2.5%",
     "Vampire's Cowl": "Nekromacji +5%",
-    "Dead Men's Boots": "Nekromacji +7.5%",
+    "Dead Man's Boots": "Nekromacji +7.5%",
     "Equestrian's Gloves": "Zasięg bohatera na lądzie +200",
     "Boots of Speed": "Zasięg bohatera na lądzie +400",
     "Cloak of Undead King": "Złożony artefakt: 15% poległych jest wskrzeszane jako szkielety. W przypadku, gdy bohater posiada umiejętność 'nekromancja', jest ona zwiększana. Na poziomie podstawowym wskrzeszane są zombie, na zaawanowanym - upiory, a na mistrzowskim - lisze."
