--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -46,7 +46,7 @@
     "Piquedram": "Пикедрам",
     "Rissa": "Ризза",
     "Thane": "Тан",
-    "Torosar": "Торосар",
+    "Torosar ": "Торосар",
     "Aine": "Айне",
     "Astral": "Астрал",
     "Cyra": "Кира",
@@ -326,7 +326,7 @@
     "-": "-",
     "Sandal's of the Saint": "Сандалии Святого",
     "Dragonbone Greaves": "Наголенники из Драконьей Кости",
-    "Dead Men's Boots": "Сапоги Мертвеца",
+    "Dead Man's Boots": "Сапоги Мертвеца",
     "Boots of Polarity": "Сапоги Противодействия",
     "Boots of Levitation": "Сапоги Левитации",
     "Boots of Speed": "Сапоги-Скороходы",
@@ -357,7 +357,7 @@
     "-": "-",
     "Quiet Eye of the Dragon": "Неподвижный Глаз Дракона",
     "Still Eye of the Dragon": "Застывший Глаз Дракона",
-    "Diplomat Ring": "Кольцо Дипломата",
+    "Diplomat's Ring": "Кольцо Дипломата",
     "Ring of the Wayfarer": "Кольцо Странника",
     "Equestrian's Gloves": "Перчатки Всадника",
     "Ring of Conjuring": "Колдовское Кольцо",
@@ -586,10 +586,10 @@
     "Spyglass": "Увеличивает радиус разведки героя на 1",
     "Amulet of the Undertaker": "Некромантия +5%",
     "Vampire's Cowl": "Некромантия +10%",
-    "Dead Men's Boots": "Некромантия +15%",
+    "Dead Man's Boots": "Некромантия +15%",
     "Garniture of Interference": "Защита от магии 5%",
     "Surcoat of Counterpoise": "Защита от магии 10%",
-    "Boots of Polarity": "Защита от магии 10%",
+    "Boots of Polarity": "Защита от магии 15%",
     "Bow of Elven Cherrywood": "Навык стрельбы +5%",
     "Bowstring of the Unicorns's Mane": "Навык стрельбы +10%",
     "Angel Feather Arrows": "Навык стрельбы +15%",
@@ -597,7 +597,7 @@
     "Stoic Watchman": "Навык орлиного глаза +10%",
     "Emblem of Cognizance": "Навык орлиного глаза +15%",
     "Statesman's Medal": "Цена капитуляции -10%",
-    "Diplomat Ring": "Цена капитуляции -10%",
+    "Diplomat's Ring": "Цена капитуляции -10%",
     "Ambassador's Sash": "Цена капитуляции -10%",
     "Ring of the Wayfarer": "Скорость ваших войск +1",
     "Equestrian's Gloves": "Очки передвижения героя по суше +300",
@@ -691,7 +691,7 @@
   "HotaArtifactDescriptions": {
     "Amulet of the Undertaker": "Некромантия +2.5%",
     "Vampire's Cowl": "Некромантия +5%",
-    "Dead Men's Boots": "Некромантия +7.5%",
+    "Dead Man's Boots": "Некромантия +7.5%",
     "Equestrian's Gloves": "Очки передвижения героя по суше +200",
     "Boots of Speed": "Очки передвижения героя по суше +400",
     "Cloak of Undead King": "Составной артефакт: Некромантия +15%, Возрождает другие типы существ."
