--- a/Heroes3Editor/Lang/lang-data.ru.json
+++ b/Heroes3Editor/Lang/lang-data.ru.json
@@ -872,5 +872,371 @@
     "Crystal Dragon": "Кристальный Дракон",
     "Faerie Dragon": "Сказочный Дракон",
     "Rust Dragon": "Ржавый Дракон"
+  },
+  "Factions": {
+    "Castle": "Замок",
+    "Conflux": "Колония",
+    "Dungeon": "Подземелье",
+    "Fortress": "Крепость",
+    "Inferno": "Инферно",
+    "Necropolis": "Некрополь",
+    "Rampart": "Бастион",
+    "Stronghold": "Твердыня",
+    "Tower": "Башня"
+  },
+  "HotaFactions": {
+    "Castle": "Замок",
+    "Conflux": "Сопряжение",
+    "Dungeon": "Темница",
+    "Fortress": "Крепость",
+    "Inferno": "Инферно",
+    "Necropolis": "Некрополис",
+    "Rampart": "Оплот",
+    "Stronghold": "Цитадель",
+    "Tower": "Башня",
+    "Cove": "Причал",
+    "Factory": "Фабрика"
+  },
+  "Towns": {
+    "Castellatus": "Кастеллат",
+    "Cornerstone": "Корнерстон",
+    "Claxton": "Клэкстон",
+    "Armitage": "Армитаж",
+    "Whistledale": "Вистледэйл",
+    "Gateway": "Гейтвэй",
+    "Dunwall": "Дюнваль",
+    "Kildare": "Килдар",
+    "Kanan": "Кэнан",
+    "Highcastle": "Хайкассел",
+    "Whitemoon": "Вайтмун",
+    "Transom": "Трэнсом",
+    "Middleheim": "Миддлхейм",
+    "Brettonia": "Бреттония",
+    "Alexandretta": "Александретта",
+    "Whitestone": "Вайтстон",
+
+    "Elementon": "Элементон",
+    "Styriam": "Стириам",
+    "Ventu": "Венту",
+    "Fleogan Mills": "Флеоган Милс",
+    "Electrising": "Электрисинг",
+    "Ceald": "Келд",
+    "Igne": "Игне",
+    "Froisan": "Фроисан",
+    "Fenderen": "Фендерен",
+    "Lagumoor": "Лагумур",
+    "Wazzar": "Ваззар",
+    "Lanting": "Лантинг",
+    "Vluchton": "Влуктон",
+    "Solium": "Солиум",
+    "Massein": "Маззейн",
+    "Magmetin": "Магметин",
+
+    "Veks": "Векс",
+    "Sorrow Crown": "Сорроу Кровн",
+    "Dragonnade": "Драгоннад",
+    "Shade": "Сшэд",
+    "Evernight": "Эвернайт",
+    "Darkburrow": "Даркборроу",
+    "Lost Hold": "Лост Холд",
+    "Coldshadow": "Колдшэдоу",
+    "Chillwater": "Чиллватер",
+    "Deepshadow": "Дипшэдоу",
+    "Darkhold": "Даркхолд",
+    "Blindroot": "Блайндрут",
+    "Shadowden": "Шэдоуден",
+    "Scar": "Скар",
+    "Malev": "Малев",
+    "Castigare": "Кастигар",
+
+    "Marshank": "Маршанк",
+    "Deadfall": "Дедфол",
+    "Drakenmoor": "Дракенмур",
+    "Hermit Cove": "Гермиткэйв",
+    "Mosswood": "Моссвуд",
+    "Marshwall": "Маршвал",
+    "Mossden": "Моссден",
+    "Mudshire": "Мудшайр",
+    "Coolmire": "Кулмайр",
+    "Backwater": "Бэквотер",
+    "Marshchoke": "Маршчок",
+    "Lostmoor": "Лостмур",
+    "Silt": "Силт",
+    "Deadwood": "Дедвуд",
+    "Edgewater": "Эджевотер",
+    "Stillbog": "Стилбог",
+
+    "Abaddon": "Аваддон",
+    "Acheron": "Ахерон",
+    "Ashcombe": "Ашкомбе",
+    "Hellwind": "Хелвинд",
+    "Stygius": "Стигиус",
+    "Styx": "Стикс",
+    "Tartaros": "Тартар",
+    "Blackburn": "Блэкбурн",
+    "Ashden": "Ашден",
+    "Brimstone": "Бримстон",
+    "Candent": "Кандент",
+    "Cinderspire": "Киндерспрай",
+    "Daemon Gate": "Даймонгейт",
+    "Enkindle": "Энкиндл",
+    "Gehenna": "Геенна",
+    "Firebrand": "Файрбранд",
+
+    "Haunt's Wind": "Хаунт Винд",
+    "Cessacioun": "Кассацион",
+    "Coldreign": "Солдринг",
+    "Dark Eternal": "Вечная Тьма",
+    "Ghostwind": "Гхоствинд",
+    "Blight": "Блайт",
+    "Shadow Keep": "Шадоукип",
+    "Worm Warren": "Ворм Варрен",
+    "Agony": "Агони",
+    "Sanctum": "Санктум",
+    "Terminus": "Терминус",
+    "Blackquarter": "Блэкквартер",
+    "Death's Gate": "Десгейт",
+    "Grave Raven": "Рэйв Равен",
+    "Dark Cloud": "Дарклауд",
+    "Coldsoul": "Колдсоул",
+
+    "Wise Oak": "Вайсоак",
+    "Forest": "Форест",
+    "Strongglen.Rampart": "Стронгглен",
+    "Marishen": "Маришен",
+    "Bath'iere": "Батиэре",
+    "Green Falls": "Гринфолс",
+    "Emerald Moor": "Эмеральд Мур",
+    "Wild Willow": "Вайлд Виллоу",
+    "Fortune Keep": "Фортун Кип",
+    "Still Water": "Стилватер",
+    "Elfwind": "Эльфвинд",
+    "Serenity": "Серенити",
+    "Ceiliedgh": "Сейлиэдх",
+    "Gladeroot": "Гладерут",
+    "Forest Glen": "Форест Глен",
+    "Rainhaven": "Райнхавен",
+
+    "Kragg": "Крэг",
+    "Drago Breach": "Драгонбрич",
+    "Tormina": "Тормина",
+    "Dolere": "Долер",
+    "Rockwarren": "Рокваррен",
+    "Strongglen.Stronghold": "Стронгл",
+    "Kruber": "Крубер",
+    "Rovener": "Ровенер",
+    "Hartgrim": "Хартгрим",
+    "Sandflash": "Сэндфлэш",
+    "Morganheim": "Морганхейм",
+    "Cragmoor": "Крэгмур",
+    "Dragonspire": "Драгонспайр",
+    "Battlement": "Баттлемент",
+    "Bocc": "Bокк",
+    "Slau": "Слау",
+
+    "Machina": "Макина",
+    "Stronggale": "Стронггэйл",
+    "Tirith": "Тирит",
+    "Fallen Star": "Фаленстар",
+    "Mystos": "Мистос",
+    "Ayer": "Эйр",
+    "Silverspire": "Сильверспайр",
+    "Manufactury": "Мануфактур",
+    "Corona": "Корона",
+    "Silverwing": "Сильвервинг",
+    "Facture": "Фактур",
+    "Cloudfire": "Клаудфайр",
+    "Cloudspire": "Клаудспайр",
+    "Equinox": "Акванокс",
+    "Athenaeum": "Афиниум",
+    "Valtara": "Вальтара"
+  },
+  "HotaTowns": {
+    "Castellatus": "Кастеллатус",
+    "Cornerstone": "Корнерстоун",
+    "Claxton": "Клакстон",
+    "Armitage": "Эрмитейдж",
+    "Whistledale": "Уистлдейл",
+    "Gateway": "Гейтуэй",
+    "Dunwall": "Дануолл",
+    "Kildare": "Килдэйр",
+    "Kanan": "Кэнан",
+    "Highcastle": "Хайкастл",
+    "Whitemoon": "Уайтмун",
+    "Transom": "Трэнсом",
+    "Middleheim": "Мидлхейм",
+    "Brettonia": "Бреттония",
+    "Alexandretta": "Александретта",
+    "Whitestone": "Уайтстоун",
+
+    "Elementon": "Элементон",
+    "Styriam": "Стириам",
+    "Ventu": "Венту",
+    "Fleogan Mills": "Флоган",
+    "Electrising": "Электризинг",
+    "Ceald": "Килд",
+    "Igne": "Игне",
+    "Froisan": "Фройзан",
+    "Fenderen": "Фендерен",
+    "Lagumoor": "Лагумур",
+    "Wazzar": "Уоззар",
+    "Lanting": "Лентинг",
+    "Vluchton": "Влактон",
+    "Solium": "Солиум",
+    "Massein": "Массейн",
+    "Magmetin": "Магметин",
+
+    "Veks": "Векс",
+    "Sorrow Crown": "Венец Скорби",
+    "Dragonnade": "Драгоннейд",
+    "Shade": "Тень",
+    "Evernight": "Эвернайт",
+    "Darkburrow": "Даркбарроу",
+    "Lost Hold": "Забытая Крепость",
+    "Coldshadow": "Колдшедоу",
+    "Chillwater": "Чилвотер",
+    "Deepshadow": "Пещерный Мрак",
+    "Darkhold": "Даркхолд",
+    "Blindroot": "Блайндрут",
+    "Shadowden": "Шедоуден",
+    "Scar": "Утёс",
+    "Malev": "Малев",
+    "Castigare": "Кастигар",
+
+    "Marshank": "Маршанк",
+    "Deadfall": "Бурелом",
+    "Drakenmoor": "Дракенмур",
+    "Hermit Cove": "Приют Отшельника",
+    "Mosswood": "Моссвуд",
+    "Marshwall": "Маршволл",
+    "Mossden": "Моссден",
+    "Mudshire": "Мадшир",
+    "Coolmire": "Кулмайр",
+    "Backwater": "Тихая Заводь",
+    "Marshchoke": "Маршчок",
+    "Lostmoor": "Затерянная Бухта",
+    "Silt": "Слякоть",
+    "Deadwood": "Валежник",
+    "Edgewater": "Эджуотер",
+    "Stillbog": "Стиллбог",
+
+    "Abaddon": "Аваддон",
+    "Acheron": "Ахерон",
+    "Ashcombe": "Ашкомб",
+    "Hellwind": "Хеллвинд",
+    "Stygius": "Стигиус",
+    "Styx": "Стикс",
+    "Tartaros": "Тартарос",
+    "Blackburn": "Чёрное Пламя",
+    "Ashden": "Ашден",
+    "Brimstone": "Бримстон",
+    "Candent": "Кандент",
+    "Cinderspire": "Циндерспир",
+    "Daemon Gate": "Врата Преисподней",
+    "Enkindle": "Энкиндль",
+    "Gehenna": "Геенна",
+    "Firebrand": "Фирбранд",
+
+    "Haunt's Wind": "Ветер Теней",
+    "Cessacioun": "Цессацион",
+    "Coldreign": "Колдрейн",
+    "Dark Eternal": "Вечная Тьма",
+    "Ghostwind": "Гоствинд",
+    "Blight": "Упадок",
+    "Shadow Keep": "Бастион Теней",
+    "Worm Warren": "Червивая Яма",
+    "Agony": "Агония",
+    "Sanctum": "Санктум",
+    "Terminus": "Терминус",
+    "Blackquarter": "Блекквотер",
+    "Death's Gate": "Врата Смерти",
+    "Grave Raven": "Вороний Пир",
+    "Dark Cloud": "Покров Тьмы",
+    "Coldsoul": "Колдсоул",
+
+    "Wise Oak": "Мудрый Дуб",
+    "Forest": "Форест",
+    "Strongglen.Rampart": "Лесистый Холм",
+    "Marishen": "Маришен",
+    "Bath'iere": "Бафьер",
+    "Green Falls": "Цветущий Водопад",
+    "Emerald Moor": "Изумрудная Роща",
+    "Wild Willow": "Вербная Роща",
+    "Fortune Keep": "Твердыня Удачи",
+    "Still Water": "Стоячая Вода",
+    "Elfwind": "Элфвинд",
+    "Serenity": "Серенити",
+    "Ceiliedgh": "Силид",
+    "Gladeroot": "Глэйдрут",
+    "Forest Glen": "Лесная Долина",
+    "Rainhaven": "Рэйнхейвен",
+
+    "Kragg": "Крэгг",
+    "Drago Breach": "Пролом Драконов",
+    "Tormina": "Тормина",
+    "Dolere": "Долер",
+    "Rockwarren": "Рокваррен",
+    "Strongglen.Stronghold": "Стронгглен",
+    "Kruber": "Крубер",
+    "Rovener": "Ровенер",
+    "Hartgrim": "Хартгрим",
+    "Sandflash": "Сэндфлэш",
+    "Morganheim": "Морганхайм",
+    "Cragmoor": "Крэгмур",
+    "Dragonspire": "Драгонспир",
+    "Battlement": "Зубчатый Вал",
+    "Bocc": "Бокк",
+    "Slau": "Слау",
+
+    "Machina": "Машина",
+    "Stronggale": "Стронгаль",
+    "Tirith": "Тирит",
+    "Fallen Star": "Упавшая Звезда",
+    "Mystos": "Мистос",
+    "Ayer": "Айер",
+    "Silverspire": "Сильверспайр",
+    "Manufactury": "Мануфактория",
+    "Corona": "Корона",
+    "Silverwing": "Сильвервинг",
+    "Facture": "Фактура",
+    "Cloudfire": "Клаудфайр",
+    "Cloudspire": "Клаудспайр",
+    "Equinox": "Эквинокс",
+    "Athenaeum": "Афиниум",
+    "Valtara": "Вальтара",
+
+    "Tartaglia": "Тарталья",
+    "Lewindale": "Левиндейл",
+    "Westland Pier": "Вестленд Пир",
+    "Walendale": "Вайлендейл",
+    "Port Crowland": "Порт Крауленд",
+    "Jordanhall": "Джорданхолл",
+    "Sleepy Creek": "Спящий Залив",
+    "Hitchgrove": "Хитчгроув",
+    "Port Evendore": "Порт Эвендор",
+    "Rotunda": "Ротонда",
+    "Watergate": "Вотергейт",
+    "Brown's Bay": "Бухта Браун",
+    "Nithenes": "Нивены",
+    "Downhaven": "Даунхавен",
+    "Lakenshire": "Лейкеншир",
+    "Noral": "Норал",
+
+    "Salda": "Салда",
+    "Burton": "Бёртон",
+    "Prospero": "Просперо",
+    "Mount Copper": "Медная Гора",
+    "Ardon": "Ардон",
+    "New Dolere": "Новый Долер",
+    "Corakstone": "Коракстон",
+    "Kergar": "Кергар",
+    "Dardentor": "Дардантор",
+    "Arcadia": "Аркадиа",
+    "Endurance": "Эндуранс",
+    "Vulcan": "Вулкан",
+    "Aurichalcum": "Орихалк",
+    "Fort Rotwang": "Форт Ротванг",
+    "Volta": "Вольта",
+    "Ridder": "Риддер"
   }
 }
